--- a/index.html
+++ b/index.html
@@ -73,18 +73,17 @@
                         <img src="img/R.png" class="card-img-top" alt="Proyecto 1">
                         <div class="card-body">
                             <h5 class="card-title text-primary">Juego de la vida de John Conway </h5>
-                            <p class="card-text">The Game of Life, creado por el matemático John Horton Conway, se llevo a cabo con  tecnologias como html,css y JS </p>
+                            <p class="card-text">The Game of Life, creado por el matemático John Horton Conway, se llevo a cabo con  tecnologias como HTML, CSS  y JS </p>
                             <a href="/html/JV.html" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" class="proyect">Ver Proyecto</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 project-card led-border">
-                        <img src="img/project2.jpg" class="card-img-top" alt="Proyecto 2">
                         <div class="card-body">
-                            <h5 class="card-title text-primary">Nombre del Proyecto 2</h5>
-                            <p class="card-text">Descripción de otro proyecto, qué aprendiste y qué lograste.</p>
-                            <a href="#" class="btn btn-outline-light btn-sm" target="_blank">Ver Proyecto</a>
+                            <h5 class="card-title text-primary">Pagina Web sobre un hotel  </h5>
+                            <p class="card-text">Se desarrolló una página web para un hotel, el proyecto fue construido con HTML5 para la estructura, CSS para el diseño visual, JavaScript para la interactividad, y Firebase como servicio backend para la autenticación y almacenamiento de datos..</p>
+                            <a href="https://dbhotel.netlify.app/" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">Ver Proyecto</a>
                         </div>
                     </div>
                 </div>
@@ -145,22 +144,43 @@
                     <h4 class="text-primary">Experiencia Laboral</h4>
                     <div class="card mb-3 led-border-small">
                         <div class="card-body">
-                            <h5 class="card-title">Tu Puesto <span class="text-muted float-end">Año Inicio - Año Fin</span></h5>
-                            <h6 class="card-subtitle mb-2 text-secondary">Nombre de la Empresa</h6>
-                            <p class="card-text">Breve descripción de tus responsabilidades y logros clave en este puesto. Usa viñetas para claridad.</p>
+                            <h5 class="card-title">Estancias l </h5>
+                            <p class="card-text">Mantenimiento a diversos equipos de computo dentro de 2
+                                                instituciones donde se llevo a cabo la funcionalidad de un
+                                                aula de computo</p>
                         </div>
                     </div>
                     </div>
-                <div class="col-md-6 mb-4">
-                    <h4 class="text-primary">Educación</h4>
-                    <div class="card mb-3 led-border-small">
-                        <div class="card-body">
-                            <h5 class="card-title">Tu Título / Grado <span class="text-muted float-end">Año Inicio - Año Fin</span></h5>
-                            <h6 class="card-subtitle mb-2 text-secondary">Nombre de la Institución</h6>
-                            <p class="card-text">Descripción breve de tu área de estudio o proyectos relevantes.</p>
-                        </div>
+            </div>
+                    
+            <div class="col-md-6 mb-4">
+                <div class="card mb-3 led-border-small">
+                    <div class="card-body">
+                        <h5 class="card-title">Estancias ll </h5>
+                        <h6 class="card-subtitle mb-2 text-secondary">Empresa Mazda</h6>
+                        <p class="card-text">Departamento en sistemas </p>
                     </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h4 class="text-primary">Educación</h4>
+                <div class="card mb-3 led-border-small">
+                    <div class="card-body">
+                        <h5 class="card-title">Universidad  <span class="text-muted float-end">2022  - Actualidad</span></h5><br>
+                        <h6 class="card-subtitle mb-2 text-secondary">Universidad Politecnica de Sinaloa</h6><br>
+                        <p class="card-text">Ingeniería en Tecnologías de la Informacion</p>
                     </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="card mb-3 led-border-small">
+                    <div class="card-body">
+                       <h5 class="card-title">Preparatoria<span class="text-muted float-end">2019  - 2022</span></h5><br>
+                        <h6 class="card-subtitle mb-2 text-secondary">Colegio SAM High School</h6><br>
+                        <p class="card-text">Tecnico en Tecnologia de la Informacion y la Comunicación</p>
+                    </div>
+               </div>
+            </div>
             </div>
         </div>
     </section>
@@ -169,8 +189,13 @@
        
                     <div class="text-center mt-4">
                         <p>También puedes encontrarme en:</p>
-                        <a href="#" class="text-light fs-3 mx-2"><i class="bi bi-linkedin"></i></a>
-                        <a href="#" class="text-light fs-3 mx-2"><i class="bi bi-gitlab"></i></a>
+                        <a href="www.linkedin.com/in/emilio-garcia-ba5612322" class="text-light fs-3 mx-2"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://gitlab.com/EmilioGarcia06" class="text-light fs-3 mx-2"><i class="bi bi-gitlab"></i></a>
+                        <a href="mailto:emilioer306@gmail.com" class="text-light fs-3 mx-2">
+                        <i class="bi bi-envelope-at-fill"></i> Escríbeme
+                        </a>
+
+
                         </div>
                 </div>
             </div>
@@ -179,12 +204,13 @@
 
     <footer class="bg-primary text-center py-3">
         <div class="container">
-            <p class="mb-0">&copy; <span id="currentYear"></span> Tu Nombre. Todos los derechos reservados.</p>
+            <p class="mb-0">&copy; <span id="currentYear"></span>  Todos los derechos reservados por Emilio Josue Garcia Elizarraras</p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <script>
         document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
