--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                         <li class="mb-2"><i class="bi bi-database me-2"></i> SQL</li>
                         <li class="mb-2"><i class="bi bi-filetype-py"></i> Python</li>
                         <li class="mb-2"><i class="bi bi-android"></i> Kotlin</li>
+                        <li class="mb-2"><i class="bi bi-wordpress"></i> WordPress</li>
+
                         </ul>
                 </div>
                 <div class="col-md-6 mb-4">
